--- a/_includes/top.html
+++ b/_includes/top.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>{{ post.title }}</title>
+    <title>{{ page.title }}</title>
   </head>
   <body class="wrap">
